--- a/style.css
+++ b/style.css
@@ -176,9 +176,7 @@ body {
 }
 
 #textes-complets {
-  height: 100vh;
-
-  margin: 20vh 0.5rem 0 0.5rem;
+  margin: 0 0.5rem 0 0.5rem;
 
   display: flex;
   flex-wrap: wrap;
