--- a/style.css
+++ b/style.css
@@ -171,12 +171,12 @@ body {
   height: 100vh;
 
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   justify-content: center;
 }
 
 #textes-complets {
-  margin: 0 0.5rem 0 0.5rem;
+  margin: 10vh 0.5rem 0 0.5rem;
 
   display: flex;
   flex-wrap: wrap;
@@ -332,7 +332,7 @@ body {
 }
 
 .bloc-texte {
-  margin: 0rem 0.5rem 1rem 0.5rem;
+  margin: 0 0.5rem 1rem 0.5rem;
   padding: 1.5rem;
 
   border: 0.5px solid var(--orange);
