--- a/style.css
+++ b/style.css
@@ -4,14 +4,20 @@
 }
 
 @font-face {
-  font-family: "Compagnon";
+  font-family: "Compagnon-Roman";
   src: url(fonts/Compagnon-Roman.otf) format("truetype");
+}
+
+@font-face {
+  font-family: "Compagnon-Light-Italic";
+  src: url(fonts/Compagnon-LightItalic.otf) format("truetype");
 }
 
 :root {
     --orange: #ff3323;
     --bleu: #eafdfa;
-    --typo: "Compagnon";
+    --typo: "Compagnon-Roman";
+    --typo-light-italic: "Compagnon-Light-Italic";
 }
 
 html {
@@ -127,6 +133,7 @@ body {
 }
 
 #phrase-input::placeholder {
+  font-family: var(--typo-light-italic);
   color: var(--orange);
 }
 
@@ -340,4 +347,6 @@ body {
 
 .date-texte {
   margin-top: 1rem;
+
+  font-family: var(--typo-light-italic);
 }
